objects/PROSAgreement__Agreement__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Agreements</relationshipLabel>
        <relationshipName>PROS_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementConfigId__c</fullName>
        <label>Config Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementEndDate__c</fullName>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementId__c</fullName>
        <label>Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementQuoteId__c</fullName>
        <label>Agreement Quote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementStartDate__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action_Status__c</fullName>
        <label>Agreement Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action__c</fullName>
        <label>Agreement Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AutomaticallyPublishMassPriceChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Publish Mass Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ParentAgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipLabel>PROS Agreements</relationshipLabel>
        <relationshipName>PROS_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Quote_Record_Type_Id__c</fullName>
        <label>Quote Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__TrackChanges__c</fullName>
        <label>TrackChanges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PROS Agreement</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PROS Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PROSAgreement__Validate_Agreement_Action_Status</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(PROSAgreement__Agreement_Action_Status__c = &quot;&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;start&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;success&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;failure&quot;))</errorConditionFormula>
        <errorDisplayField>PROSAgreement__Agreement_Action_Status__c</errorDisplayField>
        <errorMessage>Agreement Action Status is not valid.
Allowed Action Status: Start, Success and Failure.</errorMessage>
    </validationRules>
</CustomObject>